--- a/template_hpe_oneview/5.4/template_hpe_oneview.yaml
+++ b/template_hpe_oneview/5.4/template_hpe_oneview.yaml
@@ -1,6 +1,6 @@
 zabbix_export:
   version: '5.2'
-  date: '2022-02-06T14:24:02Z'
+  date: '2022-02-06T16:27:23Z'
   groups:
     -
       name: 'Discovered hosts'
@@ -161,6 +161,65 @@ zabbix_export:
               name: userName
               value: '{$ONEVIEW_USER}'
         -
+          name: 'OneView: Get Logical Enclosures'
+          type: SCRIPT
+          key: oneview.get.logicalenclosures
+          delay: 5m
+          history: '0'
+          trends: '0'
+          value_type: TEXT
+          params: |
+            try {
+                var result = [],
+                req = new CurlHttpRequest(),resp;
+                req.AddHeader('content-type: application/json');
+                req.AddHeader('x-api-version: 3000');
+            
+                //GET Token
+                resp = req.Post('https://{$ONEVIEW_HOST}/rest/login-sessions',value);
+                if (req.Status() != 200) {
+                    throw 'Response code: '+req.Status();
+                }
+                resp = JSON.parse(resp);
+                token = resp.sessionID;
+            
+                //GET Logical Enclosures
+                req.AddHeader('auth: '+token);
+                resp = req.Get('https://{$ONEVIEW_HOST}/rest/logical-enclosures');
+                if (req.Status() != 200) {
+                    throw 'Response code: '+req.Status();
+                }
+                resp = JSON.parse(resp);
+                result = resp.members.map(function(m) {
+                    return {
+                        uri: m.uri,
+                        name: m.name
+                     };
+                });
+            
+                //DELETE token
+                resp = req.Delete('https://{$ONEVIEW_HOST}/rest/login-sessions');
+                if (req.Status() != 204) {
+                    throw 'Response code: '+req.Status();
+                }
+             
+            } catch (error) {
+                Zabbix.Log(4, 'OneView api error: '+error);
+                result = {
+                    failed: error
+                };
+            }
+            
+            //RESULT
+            return JSON.stringify(result);
+          parameters:
+            -
+              name: password
+              value: '{$ONEVIEW_PASS}'
+            -
+              name: userName
+              value: '{$ONEVIEW_USER}'
+        -
           name: 'OneView: Get Servers'
           type: SCRIPT
           key: oneview.get.servers
@@ -268,8 +327,8 @@ zabbix_export:
           delay: '0'
           host_prototypes:
             -
-              host: 'enclosure - {#ENCLOSURE_NAME}'
-              name: 'enclosure - {#ENCLOSURE_NAME}'
+              host: 'Enclosure {#ENCLOSURE_NAME}'
+              name: 'Enclosure {#ENCLOSURE_NAME}'
               group_links:
                 -
                   group:
@@ -293,6 +352,35 @@ zabbix_export:
             -
               lld_macro: '{#ENCLOSURE_UUID}'
               path: '$.["uuid"]'
+        -
+          name: 'Logical Enclosure discovery'
+          type: DEPENDENT
+          key: oneview.logicalenclosures.discovery
+          delay: '0'
+          host_prototypes:
+            -
+              host: 'Logical Enclosure {#LOGICAL_ENCLOSURE_NAME}'
+              name: 'Logical Enclosure {#LOGICAL_ENCLOSURE_NAME}'
+              group_links:
+                -
+                  group:
+                    name: 'Discovered hosts'
+              templates:
+                -
+                  name: 'HPE OneView Logical Enclosure'
+              macros:
+                -
+                  macro: '{$LOGICAL_ENCLOSURE_URI}'
+                  value: '{#LOGICAL_ENCLOSURE_URI}'
+          master_item:
+            key: oneview.get.logicalenclosures
+          lld_macro_paths:
+            -
+              lld_macro: '{#LOGICAL_ENCLOSURE_NAME}'
+              path: '$.["name"]'
+            -
+              lld_macro: '{#LOGICAL_ENCLOSURE_URI}'
+              path: '$.["uri"]'
         -
           name: 'Server discovery'
           type: DEPENDENT
@@ -351,7 +439,7 @@ zabbix_export:
               parameters:
                 - $.interconnectBayWatts
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
         -
           name: 'OneView Enclosure: Power Fans and Management Devices'
           type: DEPENDENT
@@ -364,7 +452,7 @@ zabbix_export:
               parameters:
                 - $.fansAndManagementDevicesWatts
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
         -
           name: 'OneView Enclosure: Power Allocated'
           type: DEPENDENT
@@ -377,7 +465,7 @@ zabbix_export:
               parameters:
                 - $.powerAllocatedWatts
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
         -
           name: 'OneView Enclosure: Power Available'
           type: DEPENDENT
@@ -390,7 +478,7 @@ zabbix_export:
               parameters:
                 - $.powerAvailableWatts
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
         -
           name: 'OneView Enclosure: Power Capacity'
           type: DEPENDENT
@@ -403,7 +491,7 @@ zabbix_export:
               parameters:
                 - $.powerCapacityWatts
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
         -
           name: 'OneView Enclosure: Serial Number'
           type: DEPENDENT
@@ -417,7 +505,7 @@ zabbix_export:
               parameters:
                 - $.serialNumber
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
         -
           name: 'OneView Enclosure: Power Server Bays'
           type: DEPENDENT
@@ -430,7 +518,7 @@ zabbix_export:
               parameters:
                 - $.deviceBayWatts
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
         -
           name: 'OneView Enclosure: Status'
           type: DEPENDENT
@@ -444,7 +532,7 @@ zabbix_export:
               parameters:
                 - $.status
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
           triggers:
             -
               expression: '{last()}<>"OK"'
@@ -464,7 +552,7 @@ zabbix_export:
               parameters:
                 - $.supportState
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
           triggers:
             -
               expression: '{last()}<>"Enabled"'
@@ -474,7 +562,7 @@ zabbix_export:
         -
           name: 'OneView Enclosure: Get Enclosure Parameters'
           type: SCRIPT
-          key: oneview.get.parts
+          key: oneview.get.enclosure.parameters
           history: '0'
           trends: '0'
           value_type: TEXT
@@ -530,6 +618,13 @@ zabbix_export:
           type: DEPENDENT
           key: enclosure.appliance.disovery
           delay: '0'
+          filter:
+            conditions:
+              -
+                macro: '{#ENCLOSURE_APPLIANCE_PRESENCE}'
+                value: ^Absent$
+                operator: NOT_MATCHES_REGEX
+                formulaid: A
           item_prototypes:
             -
               name: 'OneView Enclosure: Appliance Bay{#ENCLOSURE_APPLIANCE_BAY} {#ENCLOSURE_APPLIANCE_MODEL} Power State'
@@ -544,7 +639,13 @@ zabbix_export:
                   parameters:
                     - '$.applianceBays[?(@.bayNumber=="{#ENCLOSURE_APPLIANCE_BAY}")].poweredOn.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
+              trigger_prototypes:
+                -
+                  expression: '{last()}<>"true"'
+                  name: 'Enclosure Appliance module power state problem in BAY{#ENCLOSURE_APPLIANCE_BAY}'
+                  opdata: 'power state: {ITEM.LASTVALUE1}'
+                  priority: AVERAGE
             -
               name: 'OneView Enclosure: Appliance Bay{#ENCLOSURE_APPLIANCE_BAY} {#ENCLOSURE_APPLIANCE_MODEL} Presence'
               type: DEPENDENT
@@ -558,7 +659,7 @@ zabbix_export:
                   parameters:
                     - '$.applianceBays[?(@.bayNumber=="{#ENCLOSURE_APPLIANCE_BAY}")].devicePresence.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
             -
               name: 'OneView Enclosure: Appliance Bay{#ENCLOSURE_APPLIANCE_BAY} {#ENCLOSURE_APPLIANCE_MODEL} Status'
               type: DEPENDENT
@@ -572,9 +673,15 @@ zabbix_export:
                   parameters:
                     - '$.applianceBays[?(@.bayNumber=="{#ENCLOSURE_APPLIANCE_BAY}")].status.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
+              trigger_prototypes:
+                -
+                  expression: '{last()}<>"OK"'
+                  name: 'Enclosure Appliance module error in BAY{#ENCLOSURE_APPLIANCE_BAY}'
+                  opdata: 'Appliance status: {ITEM.LASTVALUE1}'
+                  priority: HIGH
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
           lld_macro_paths:
             -
               lld_macro: '{#ENCLOSURE_APPLIANCE_BAY}'
@@ -582,6 +689,9 @@ zabbix_export:
             -
               lld_macro: '{#ENCLOSURE_APPLIANCE_MODEL}'
               path: $.model
+            -
+              lld_macro: '{#ENCLOSURE_APPLIANCE_PRESENCE}'
+              path: $.devicePresence
           preprocessing:
             -
               type: JSONPATH
@@ -606,7 +716,7 @@ zabbix_export:
                   parameters:
                     - '$.fanBays[?(@.bayNumber=="{#ENCLOSURE_FAN_BAY}")].devicePresence.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
             -
               name: 'OneView Enclosure: FAN Bay{#ENCLOSURE_FAN_BAY} Status'
               type: DEPENDENT
@@ -621,7 +731,7 @@ zabbix_export:
                     - '$.fanBays[?(@.bayNumber=="{#ENCLOSURE_FAN_BAY}")].status.first()'
                   error_handler: DISCARD_VALUE
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
               trigger_prototypes:
                 -
                   expression: '{last()}<>"OK"'
@@ -629,7 +739,7 @@ zabbix_export:
                   opdata: 'state: {ITEM.LASTVALUE1}'
                   priority: HIGH
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
           lld_macro_paths:
             -
               lld_macro: '{#ENCLOSURE_FAN_BAY}'
@@ -644,11 +754,18 @@ zabbix_export:
           type: DEPENDENT
           key: enclosure.manager.disovery
           delay: '0'
+          filter:
+            conditions:
+              -
+                macro: '{#ENCLOSURE_MANAGER_PRESENCE}'
+                value: ^Absent$
+                operator: NOT_MATCHES_REGEX
+                formulaid: A
           item_prototypes:
             -
-              name: 'OneView Enclosure: Manager Bay{#ENCLOSURE_MANAGER_BAY} {#ENCLOSURE_MANAGER_MODEL} Link State'
+              name: 'OneView Enclosure: Manager Bay{#ENCLOSURE_MANAGER_BAY} {#ENCLOSURE_MANAGER_MODEL} Link Status'
               type: DEPENDENT
-              key: 'manager.bay.linkstate.[{#ENCLOSURE_MANAGER_BAY}]'
+              key: 'manager.bay.linkstatus.[{#ENCLOSURE_MANAGER_BAY}]'
               delay: '0'
               trends: '0'
               value_type: TEXT
@@ -656,9 +773,15 @@ zabbix_export:
                 -
                   type: JSONPATH
                   parameters:
-                    - '$.managerBays[?(@.bayNumber=="{#ENCLOSURE_MANAGER_BAY}")].linkPortState.first()'
+                    - '$.managerBays[?(@.bayNumber=="{#ENCLOSURE_MANAGER_BAY}")].linkPortStatus.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
+              trigger_prototypes:
+                -
+                  expression: '{last()}<>"OK"'
+                  name: 'Enclosure Manager module link error in BAY{#ENCLOSURE_MANAGER_BAY}'
+                  opdata: 'link status: {ITEM.LASTVALUE1}'
+                  priority: HIGH
             -
               name: 'OneView Enclosure: Manager Bay{#ENCLOSURE_MANAGER_BAY} {#ENCLOSURE_MANAGER_MODEL} Status'
               type: DEPENDENT
@@ -672,9 +795,15 @@ zabbix_export:
                   parameters:
                     - '$.managerBays[?(@.bayNumber=="{#ENCLOSURE_MANAGER_BAY}")].status.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
+              trigger_prototypes:
+                -
+                  expression: '{last()}<>"OK"'
+                  name: 'Enclosure Manager module error in BAY{#ENCLOSURE_MANAGER_BAY}'
+                  opdata: 'state: {ITEM.LASTVALUE1}'
+                  priority: HIGH
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
           lld_macro_paths:
             -
               lld_macro: '{#ENCLOSURE_MANAGER_BAY}'
@@ -682,6 +811,9 @@ zabbix_export:
             -
               lld_macro: '{#ENCLOSURE_MANAGER_MODEL}'
               path: $.model
+            -
+              lld_macro: '{#ENCLOSURE_MANAGER_PRESENCE}'
+              path: $.devicePresence
           preprocessing:
             -
               type: JSONPATH
@@ -706,7 +838,7 @@ zabbix_export:
                   parameters:
                     - '$.powerSupplyBays[?(@.bayNumber=="{#ENCLOSURE_PSU_BAY}")].devicePresence.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
             -
               name: 'OneView Enclosure: PSU Bay{#ENCLOSURE_PSU_BAY} Status'
               type: DEPENDENT
@@ -720,7 +852,7 @@ zabbix_export:
                   parameters:
                     - '$.powerSupplyBays[?(@.bayNumber=="{#ENCLOSURE_PSU_BAY}")].status.first()'
               master_item:
-                key: oneview.get.parts
+                key: oneview.get.enclosure.parameters
               trigger_prototypes:
                 -
                   expression: '{last()}<>"OK"'
@@ -728,7 +860,7 @@ zabbix_export:
                   opdata: 'state: {ITEM.LASTVALUE1}'
                   priority: HIGH
           master_item:
-            key: oneview.get.parts
+            key: oneview.get.enclosure.parameters
           lld_macro_paths:
             -
               lld_macro: '{#ENCLOSURE_PSU_BAY}'
@@ -738,6 +870,94 @@ zabbix_export:
               type: JSONPATH
               parameters:
                 - $.powerSupplyBays
+    -
+      template: 'HPE OneView Logical Enclosure'
+      name: 'HPE OneView Logical Enclosure'
+      groups:
+        -
+          name: 'Templates/Server hardware'
+      items:
+        -
+          name: 'OneView Enclosure: Get Logical Enclosure Parameters'
+          type: SCRIPT
+          key: oneview.get.logicalenclosure.parameters
+          history: '0'
+          trends: '0'
+          value_type: TEXT
+          params: |
+            try {
+                var result = [],
+                req = new CurlHttpRequest(),
+                resp;
+                req.AddHeader('content-type: application/json');
+                req.AddHeader('x-api-version: 3000');
+            
+                //GET Token
+                resp = req.Post('https://{$ONEVIEW_HOST}/rest/login-sessions',value);
+                if (req.Status() != 200) {
+                    throw 'Response code: '+req.Status();
+                }
+                resp = JSON.parse(resp);
+                token = resp.sessionID;
+            
+                //GET Enclosure
+                req.AddHeader('auth: '+token);
+                resp = req.Get('https://{$ONEVIEW_HOST}/{$LOGICAL_ENCLOSURE_URI}');
+                if (req.Status() != 200) {
+                    throw 'Response code: '+req.Status();
+                }
+                result = JSON.parse(resp);
+            
+                //DELETE token
+                resp = req.Delete('https://{$ONEVIEW_HOST}/rest/login-sessions');
+                if (req.Status() != 204) {
+                    throw 'Response code: '+req.Status();
+                }
+             
+            } catch (error) {
+                Zabbix.Log(4, 'OneView api error: '+error);
+                result = {
+                    failed: error
+                };
+            }
+            
+            //RESULT
+            return JSON.stringify(result);
+          parameters:
+            -
+              name: password
+              value: '{$ONEVIEW_PASS}'
+            -
+              name: userName
+              value: '{$ONEVIEW_USER}'
+        -
+          name: 'OneView Logical Enclosure: consistency state'
+          type: DEPENDENT
+          key: oneview.logicalenclosure.consistency
+          delay: '0'
+          trends: '0'
+          value_type: CHAR
+          preprocessing:
+            -
+              type: JSONPATH
+              parameters:
+                - $.state
+          master_item:
+            key: oneview.get.logicalenclosure.parameters
+        -
+          name: 'OneView Logical Enclosure: Status'
+          type: DEPENDENT
+          key: oneview.logicalenclosure.status
+          delay: '0'
+          trends: '0'
+          value_type: CHAR
+          preprocessing:
+            -
+              type: JSONPATH
+              parameters:
+                - $.status
+          master_item:
+            key: oneview.get.logicalenclosure.parameters
     -
       template: 'HPE OneView Server'
       name: 'HPE OneView Server'
